fixed row titles and row item overflow
also added react js modal package

--- a/src/components/Row/Row.css
+++ b/src/components/Row/Row.css
@@ -12,9 +12,12 @@
   display: flex;
   flex-direction: row;
   gap: 0.5em;
+  /* overflow: visible; */
   overflow-y: hidden;
   overflow-x: scroll;
   padding-top: 1em;
+  padding-left: 1em;
+  padding-bottom: 1em;
 }
 
 .row-posters p {
@@ -53,8 +56,10 @@
   transition: transform 0.5s ease-in-out;
   width: 18vw;
   min-width: 160px;
+  cursor: pointer;
 }
 
 .show:hover {
   transform: scale(1.1);
+  transition-delay: 0.15s;
 }
